--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,19 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+    //testImplementation 'org.springframework.security:spring-security-test'
+
+    implementation 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //Spring Data JPA
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
+    testImplementation 'org.springdoc:springdoc-openapi-webmvc-core:1.6.11'
+
 }
 
 tasks.named('test') {
