--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+# 콘솔로그로 남기 때문에 권장 X
+#spring.jpa.show-sql=true
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.h2.console.enabled=true
+
+#머스테치-스프링부트 2.7.0에서 한글 깨짐
+server.servlet.encoding.force-response=true 
+
+# application-oauth.properties를 application.properties에 포함
+spring.profiles.include=oauth
+
+# swaggerdoc
+springdoc.version=v1.0.0
+springdoc.packages-to-scan=com.heylj.book
+springdoc.swagger-ui.path=/api-docs
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.api-docs.path=/api-docs
+springdoc.api-docs.groups.enabled=true
+springdoc.cache.disabled=true
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
