--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,16 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
 
 #머스테치-스프링부트 2.7.0에서 한글 깨짐
 server.servlet.encoding.force-response=true 
 
 # application-oauth.properties를 application.properties에 포함
-spring.profiles.include=oauth
+spring.profiles.include=oauth,swagger
+
+# 세션 저장소를 메모리에서 DB로 변경
+spring.session.store-type=jdbc
 
 # swaggerdoc
 springdoc.version=v1.0.0
